--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <li><a href="#">PHP</a></li>
         <li><a href="#">SQL</a></li>
       </ul>
-    </nav>
-    <h1>Opdracht 3.1</h1> <br>
-    <a href=https://www.techniekcollegerotterdam.nl>school</a>
-    <img src="/img/background.jpeg" alt="" height="100%" width="100%">
+    
 
   </body>
+  <footer>
+    
+  </footer>
 </html>
