--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="style.css" />
     <title>Opdracht 3</title>
   </head>
-  <body>
     <nav>
       <img src="./img/hacker.png" id="logo" />
       <ul>
@@ -22,10 +21,14 @@
         <li><a href="#">PHP</a></li>
         <li><a href="#">SQL</a></li>
       </ul>
-    
+    </nav>
+ 
 
+  <body>
+     <h2 class="container">First Year TCR</h2>
+     <p class="container">Programming Languages</p>  
   </body>
+ 
   <footer>
-    
-  </footer>
+</footer>
 </html>
