--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <body>
      <h2 class="container">First Year TCR</h2>
      <p class="container">Programming Languages</p>  
+     <img src="/img/hacker.png" alt="">
   </body>
  
   <footer>
