--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
   </head>
     <nav>
       <img src="./img/hacker.png" id="logo" />
-      <ul>
-        <li><a href="#">HTML/CSS</a></li>
-        <li><a href="#">Javascript</a></li>
-        <li><a href="#">PHP</a></li>
-        <li><a href="#">SQL</a></li>
+        <li class="nav-item"><a href="#">HTML/CSS</a></li>
+        <li class="nav-item"><a href="#">Javascript</a></li>
+        <li class="nav-item"><a href="#">PHP</a></li>
+        <li class="nav-item"><a href="#">SQL</a></li>
+      </ul>
+
+
+
+ <div class="dropdown">
+    <h1 class="dropdown-btn nav-item">jaar 2</h1>
+      <ul class="dropdown-content">
+         <li><a href="#">oop</a></li>
+         <li><a href="#">laravel</a></li>
+         <li><a href="#">testen</a></li>
       </ul>
     </nav>
- 
+  </div>
 
   <body>
      <h2 class="container">First Year TCR</h2>
